--- a/css/main.css
+++ b/css/main.css
@@ -162,11 +162,12 @@ header article p span img {
   overflow-x: auto;
   background: #000;
   position: absolute;
-  left: 100%;
+  left: 0%;
   top: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  z-index: 2;
 }
 
 .main .page_02 > div {
@@ -184,7 +185,7 @@ header article p span img {
 }
 
 .main .article_02 img {
-  width: 30%;
+  width: auto;
   height: 80%;
   position: relative;
   left: 30%;
@@ -205,6 +206,7 @@ header article p span img {
   right: 0;
   top: 35%;
   margin-left: 100%;
+  z-index: 2;
 }
 
 .main .article_02 .spot_02 h3 {
