--- a/css/main.scss
+++ b/css/main.scss
@@ -109,9 +109,10 @@ header{
         width: 100vw; height:100vh;
         overflow-x:auto;
         background: #000;
-        position:absolute;left:100%; top:0;
+        position:absolute;left:0%; top:0;
         display:flex;
         // flex-wrap: nowrap;
+        z-index: 2;
     }
     .page_02 > div{
         flex:0 0 auto;
@@ -122,7 +123,7 @@ header{
         display:flex;
         background:#000;
         img{
-            width:30%; 
+            width:auto; 
             height: 80%; 
             position: relative;
             left: 30%;
@@ -140,6 +141,7 @@ header{
             position: absolute;
             right: 0; top: 35%;
             margin-left:100%;
+            z-index: 2;
             h3{font-size: 50px;
                margin: 25px 0; 
             }
