--- a/css/sub.scss
+++ b/css/sub.scss
@@ -107,6 +107,7 @@ header{
         position:absolute;left:0%; top:0;
         display:flex;
         // flex-wrap: nowrap;
+        z-index: 2;
     }
     .sub_02 > div{
         flex:0 0 auto;
